numpy random으로 벡터 생성하는 법에 대한 공부

--- a/PythonNumpy/NumpyStudy.ipynb
+++ b/PythonNumpy/NumpyStudy.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "## import convention \n",
@@ -14,8 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -23,8 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "data = np.random.randn(2, 3)"
@@ -32,19 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[-0.26050563, -0.92113477,  0.72422698],\n",
-       "       [ 0.33624661,  1.91048222, -0.63592224]])"
-      ]
+      "text/plain": "array([[-0.06127224,  0.74906655,  0.5063797 ],\n       [ 2.05299279,  0.66468439,  0.32121717]])"
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 5
     }
    ],
    "source": [
@@ -53,19 +66,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[-2.60505634, -9.21134775,  7.24226981],\n",
-       "       [ 3.36246606, 19.10482221, -6.35922244]])"
-      ]
+      "text/plain": "array([[-0.61272241,  7.49066553,  5.06379705],\n       [20.52992788,  6.64684393,  3.21217174]])"
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 6
     }
    ],
    "source": [
@@ -74,19 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[-0.52101127, -1.84226955,  1.44845396],\n",
-       "       [ 0.67249321,  3.82096444, -1.27184449]])"
-      ]
+      "text/plain": "array([[-0.12254448,  1.49813311,  1.01275941],\n       [ 4.10598558,  1.32936879,  0.64243435]])"
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 7
     }
    ],
    "source": [
@@ -95,18 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(2, 3)"
-      ]
+      "text/plain": "(2, 3)"
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 8
     }
    ],
    "source": [
@@ -115,18 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "dtype('float64')"
-      ]
+      "text/plain": "dtype('float64')"
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 9
     }
    ],
    "source": [
@@ -135,8 +154,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "data1 = [6, 7.5, 8, 0, 1]\n",
@@ -145,18 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([6. , 7.5, 8. , 0. , 1. ])"
-      ]
+      "text/plain": "array([6. , 7.5, 8. , 0. , 1. ])"
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 11
     }
    ],
    "source": [
@@ -165,8 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "data2 = [[1, 2, 3, 4], [5, 6, 7, 8]]\n",
@@ -175,19 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[1, 2, 3, 4],\n",
-       "       [5, 6, 7, 8]])"
-      ]
+      "text/plain": "array([[1, 2, 3, 4],\n       [5, 6, 7, 8]])"
      },
-     "execution_count": 19,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 13
     }
    ],
    "source": [
@@ -196,18 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "2"
-      ]
+      "text/plain": "2"
      },
-     "execution_count": 20,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 14
     }
    ],
    "source": [
@@ -216,18 +248,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(2, 4)"
-      ]
+      "text/plain": "(2, 4)"
      },
-     "execution_count": 21,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 15
     }
    ],
    "source": [
@@ -236,10 +270,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[[0.17238193, 0.72100541],\n        [0.09475076, 0.73588011],\n        [0.8964962 , 0.4275943 ]],\n\n       [[0.69822524, 0.43340649],\n        [0.64039901, 0.64331145],\n        [0.76073884, 0.81108974]]])"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 56
+    }
+   ],
+   "source": [
+    "np.random.rand(2, 3, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[ 0.46657498, -0.36936897,  0.96645192],\n       [-0.07083221,  0.59931745,  0.17744024],\n       [ 1.47445733,  0.83712909, -1.21755012]])"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 65
+    }
+   ],
+   "source": [
+    "np.random.randn(3, 3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[69, 49, 76, 62, 13, 86, 49, 41, 45,  1, 70,  1, 36, 85, 60, 19,\n        41,  2, 58, 51, 24, 68, 41, 80, 43, 81, 57,  9, 70, 87, 18, 59,\n        65, 55, 84, 18, 92, 91, 19, 50, 64, 30, 92, 16, 83, 59, 22, 93,\n         9, 17],\n       [10, 94,  7, 56, 47, 31, 43, 41, 18, 43, 12, 73,  8, 79, 16, 58,\n        60, 18, 22, 71, 53, 44, 19, 30,  9, 48, 93, 79, 50, 79, 27, 29,\n        90, 82, 75, 33, 89, 88, 67, 91, 70, 19, 30, 19, 81, 18, 41, 35,\n        62, 47]])"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 70
+    }
+   ],
+   "source": [
+    "np.random.randint(1, 100, size=(2, 50))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[[ 1.62434536, -0.61175641],\n        [-0.52817175, -1.07296862],\n        [ 0.86540763, -2.3015387 ],\n        [ 1.74481176, -0.7612069 ]],\n\n       [[ 0.3190391 , -0.24937038],\n        [ 1.46210794, -2.06014071],\n        [-0.3224172 , -0.38405435],\n        [ 1.13376944, -1.09989127]],\n\n       [[-0.17242821, -0.87785842],\n        [ 0.04221375,  0.58281521],\n        [-1.10061918,  1.14472371],\n        [ 0.90159072,  0.50249434]]])"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 106
+    }
+   ],
+   "source": [
+    "np.random.seed(1)\n",
+    "np.random.randn(3, 4, 2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
@@ -259,6 +395,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
