--- a/PythonNumpy/NumpyStudy.ipynb
+++ b/PythonNumpy/NumpyStudy.ipynb
@@ -365,6 +365,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 108,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[ 9, 67, 23, 27],\n       [37, 57, 83, 38],\n       [ 8, 32, 34, 10]])"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 108
+    }
+   ],
+   "source": [
+    "np.random.choice(100, size=(3, 4))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
